# own-your-pace

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: ERD.pgerd  base.py  init.sql  session.py
backend/app/db/migrations/: README  env.py
backend/app/db/migrations/versions/: 001_initial_users.py  868062eb445f_initial_schema_users_sports_workouts_.py
backend/app/models/: gear.py  lap.py  metric.py  sport.py  sync_source.py  user.py  workout.py
backend/app/schemas/: user.py
docs/: architecture.md  development-phases.md
