[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "own-your-pace"
version = "0.1.0"
description = "Self-hosted fitness data aggregator. Sync once, own forever."
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",

    # Database
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "geoalchemy2==0.15.1",

    # Redis + task queue
    "redis==5.0.4",
    "celery==5.4.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",

    # Validation & settings
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # File parsing
    "gpxpy==1.6.2",
    "fitparse==1.2.0",

    # HTTP client (untuk hit Strava API)
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",       # TestClient
    "factory-boy==3.3.0",  # test fixtures
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "DATABASE_URL=postgresql+psycopg2://fitclone:testpassword@localhost:5432/fitclone_test",
    "REDIS_URL=redis://localhost:6379/0",
    "SECRET_KEY=test-secret-key-for-testing-only-32ch",
]